@@ -25,11 +25,15 @@ TODO: rxvt -font 10x20 -xrm "*.tabbed.font: 10x20" -pe tabbed
       how does one affect the tab windows themselves? seems not to work anymore.
 
 TODO: memory leak for((i=0;i<1000;++o)); do rxvtc -g 1x1 -e exit;done
+TODO: implement initial chdir for tabs by making it a resource?
+	- correctly reset the multibyte state to the initial one
+          after EILSEQ (patch by Neil Booth). This fixes the
+          issue of rxvt-unicode not properly displaying text after an illegal
+          sequence on NetBSD and probably other systems.
 	- made tabs moveable (based on a patch by Petr Machata).
         - support relative paths for RXVT_SOCKET in urxvtd.
         - better diagnostic on 0x0 window geometries.
-      	
-TODO: implement initial chdir for tabs by making it a resource?
+
 9.02 Tue Jan 29 11:58:36 CET 2008
 	- the "exg makes everybody happy" release.
 	- fix build with !xft.
